--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,7 @@ body {
 
   .add-form {
     padding: 20px;
-    /* margin-top: 48px; */
+    margin-top: 48px;
     display: flex;
     flex-direction: column;
   }
